<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/debit_button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="158dp"
        android:text="@string/debit"
        android:layout_marginLeft="59dp"
        android:layout_alignParentLeft="true" />

    <RadioButton
        android:id="@+id/credit_button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_toRightOf="@id/debit_button"
        android:layout_marginTop="158dp"
        android:text="@string/credit"
        android:layout_toEndOf="@id/debit_button" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/credit_button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/credit_button"
        android:layout_marginBottom="178dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:text="@string/ok" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText3"
        android:layout_marginBottom="118dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="83dp"
        android:layout_height="41dp"
        android:layout_alignStart="@+id/debit_button"
        android:layout_alignTop="@+id/editText3"
        android:text="@string/amont"
        android:layout_alignLeft="@+id/debit_button"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</RelativeLayout>